--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   </head>
   <body>
     <div id="root"></div>
+    <script>
+      const global = globalThis
+    </script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
